<resources>
    <string name="app_name">P4LIveData</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_vs_visitante">Local vs Visitante</string>
    <string name="MarcadorLocal">0</string>
    <string name="MarcadorVisitante">0</string>
    <string name="local">Local</string>
    <string name="visitante">Visitante</string>
    <string name="cuotaLocal">3,00</string>
    <string name="cuotaEmpate">3,00</string>
    <string name="cuotaVisitante">3,00</string>
    <string name="Uno">1</string>
    <string name="Equis">X</string>
    <string name="Dos">2</string>
    <string name="campofutbol">campoFutbol</string>
    <string name="start">Start</string>
</resources>